# streamdeck-sc-mapper

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  release.toml
.githooks/: pre-push
.github/workflows/: build_and_release  build_and_release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: core_log.rs  lib.rs
crates/core/src/bindings/: action_binding.rs  action_bindings.rs  action_map.rs  activation_mode.rs  bind.rs  bind_tokens.rs  binds.rs  binds_generator.rs  constants.rs  generate_mappings_xml.rs  mod.rs  str_intern.rs  translations.rs
crates/core/src/sc/: install.rs  mod.rs  profiles.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: main.rs  simulate.rs  topics.rs
crates/plugin/src/actions/: generate_profile.rs  mod.rs  rotate_install.rs  sc_action.rs
crates/plugin/src/adapters/: bindings_adapter.rs  exec_adapter.rs  install_scanner.rs  mod.rs
crates/plugin/src/state/: action_bindings_store.rs  active_install_store.rs  install_paths_store.rs  mod.rs  resource_dir_store.rs
crates/plugin/src/util/: core_log.rs  mod.rs  resource_dir.rs  serde_helpers.rs
icu.veelume.sc-mapper.sdPlugin/: defaultProfile.xml  manifest.json
icu.veelume.sc-mapper.sdPlugin/ui/: action.html  settings.html  toggle_action.html
src/: data_source.rs  keyboard_input.rs  lib.rs  logger.rs  main.rs  plugin.rs  serde_helpers.rs  state.rs  utils.rs
src/action_binds/: action_binding.rs  action_bindings.rs  action_map.rs  activation_mode.rs  bind.rs  bind_generator.rs  binds.rs  constants.rs  generate_mappings_xml.rs  mod.rs
src/action_handler/: generate_binds.rs  mod.rs  sc_action.rs  sc_toggle_action.rs
src/actions/: generate_profile.rs  rotate_install.rs  sc_action.rs
src/bindings/: action_binding.rs  action_bindings.rs  action_map.rs  activation_mode.rs  bind.rs  bind_tokens.rs  binds.rs  binds_generator.rs  constants.rs  generate_mappings_xml.rs  helpers.rs  str_intern.rs  translations.rs
src/sc/: shared.rs  topics.rs
src/sc/adapters/: bindings_adapter.rs  exec_adapter.rs  install_scanner.rs
