[package]
name = "streamdeck-sc-mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["alloc", "std", "clock", "now", "serde"] }
directories = "6.0.0"
indexmap = { version = "2.10.0", features = ["serde"] }
once_cell = "1.21.3"
quick-xml = "0.38.0"
regex = "1.11.1"
roxmltree = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
timer = "0.2.0"
websocket = "0.27.1"
windows = { version = "0.61.3", features = ["Win32", "Win32_UI", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse"] }
