# /Cargo.toml  (root)
[workspace]
members = [
  "crates/core",
  "crates/plugin",
  "crates/cli",
]

resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["veelume"]
license = "MIT OR Apache-2.0"

# Keep versions in one place to avoid drift.
[workspace.dependencies]
chrono = { version = "0.4.41", features = ["alloc", "std", "clock", "now", "serde"] }
directories = "6.0.0"
indexmap = { version = "2.10.0", features = ["serde"] }
once_cell = "1.21.3"
regex = "1.11.1"
roxmltree = "0.20.0"
serde_json = "1.0.141"
streamdeck-lib = { git = "https://github.com/veelume/streamdeck-lib", tag = "v0.2.2" }
crossbeam-channel = "0.5.15"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive", "rc"] }
clap = { version = "4.5", features = ["derive"] }
constcat = "0.6.1"
arc-swap = "1.7.1"
quick-xml = "0.38.0"
