[package]
name = "streamdeck-sc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
indexmap.workspace = true
once_cell.workspace = true
regex.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
streamdeck-lib.workspace = true
parking_lot.workspace = true
directories.workspace = true
quick-xml.workspace = true
